[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemies/Bat/Bat.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Bat/bat_sprite.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bat/bat-wings.wav" type="AudioStream" id=3]
[ext_resource path="res://Enemies/Bat/bat_squeak.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "dead"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.4, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -180.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "flying"
length = 0.45
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.9168, 5.92195 )

[sub_resource type="CircleShape2D" id=5]
radius = 100.0

[node name="Bat" type="KinematicBody2D" groups=[
"ENEMY",
]]
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 6
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 1 )
anims/flying = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 5 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Flying" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
